crates/uselesskey-cli/tests/snapshots/export_formats__manifest_GenericManifest.snap
---
source: crates/uselesskey-cli/tests/export_formats.rs
expression: stable
---
{
  "bundle_name": "fixture-bundle",
  "references": {},
  "source_receipt_path": "target/fixtures/receipt.json",
  "target_format": "generic_manifest",
  "written_files": []
}
