crates/uselesskey-cli/tests/snapshots/export_formats__manifest_KubernetesSecretYaml.snap
---
source: crates/uselesskey-cli/tests/export_formats.rs
expression: stable
---
{
  "bundle_name": "fixture-bundle",
  "references": {
    "client_token": [
      {
        "key": "client_token",
        "kind": "k8s_secret",
        "name": "fixture-bundle"
      }
    ],
    "issuer_key": [
      {
        "key": "issuer_key",
        "kind": "k8s_secret",
        "name": "fixture-bundle"
      }
    ]
  },
  "source_receipt_path": "target/fixtures/receipt.json",
  "target_format": "kubernetes_secret_yaml",
  "written_files": [
    "<TMP>/KubernetesSecretYaml/fixture-bundle-k8s-secret.yaml"
  ]
}
